[gd_scene load_steps=3 format=3 uid="uid://cn2bbomafg8ko"]

[ext_resource type="Texture2D" uid="uid://dglhyp43egvd6" path="res://icon.svg" id="1_48mtx"]
[ext_resource type="Script" uid="uid://b456afpsir50f" path="res://screens/allies_market/market_ally_presenter/market_ally_presenter.gd" id="1_g813r"]

[node name="MarketAllyPresenter" type="VBoxContainer"]
script = ExtResource("1_g813r")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="AllyThumbnail" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_48mtx")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="AllyName" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Shoter Ally"

[node name="AllyPrice" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "500"

[node name="BuyBtn" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "BUY"

[connection signal="pressed" from="BuyBtn" to="." method="_on_buy_btn_pressed"]
